# LibGrabber

./: README.md
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/antik/libgrabber/: MainActivity.java
